--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="calculator">
+        <input type="text" id="display" disabled>
+        <div id="buttons">
+          <button class="operator" value="+">+</button>
+          <button class="operator" value="-">-</button>
+          <button class="operator" value="*">*</button>
+          <button class="operator" value="/">/</button>
+          <button value="7">7</button>
+          <button value="8">8</button>
+          <button value="9">9</button>
+          <button value="4">4</button>
+          <button value="5">5</button>
+          <button value="6">6</button>
+          <button value="1">1</button>
+          <button value="2">2</button>
+          <button value="3">3</button>
+          <button value="0">0</button>
+          <button id="decimal" value=".">.</button>
+          <button id="clear" value="clear">C</button>
+          <button id="equals" value="=">=</button>
+        </div>
+      </div>
+      
 
     <script src="script.js"></script>
 </body>
