--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="calculator">
+        <h1>SIMPLE CALCULATOR</h1>
         <input type="text" id="display" disabled>
         <div id="buttons">
             <div>
@@ -32,8 +33,8 @@
                 <button value="1">1</button>
                 <button value="2">2</button>
                 <button value="3">3</button>
-                <button value="0">0</button>
                 <button id="decimal" value=".">.</button>
+                <button value="0">0</button>
                 <button id="equals" value="=">=</button>
             </div>
         </div>
